--- a/package.json
+++ b/package.json
@@ -1,44 +1,46 @@
 {
-  "name": "snowplow-tracker",
-  "version": "2.4.2",
-  "devDependencies": {
-    "JSON": "~1.0.0",
-    "browser-cookie-lite": "~0.3.1",
-    "browserify": "~3.28.1",
-    "grunt": "~0.4.2",
-    "grunt-browserify": "~1.3.0",
-    "grunt-cloudfront": "^0.2.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-lodash": "~0.3.0",
-    "grunt-s3": "~0.2.0-alpha.3",
-    "grunt-yui-compressor": "git://github.com/snowplow/grunt-yui-compressor.git#feature/issue-8",
-    "intern": "~1.5.0",
-    "jstimezonedetect": "~1.0.5",
-    "lodash": "^3.1.0",
-    "lodash-cli": "^2.4.2",
-    "murmurhash": "0.0.2",
-    "semver": "~2.2.1",
-    "sha1": "git://github.com/pvorb/node-sha1.git#v1.0.0",
-    "snowplow-tracker-core": "0.3.0"
-  },
-  "contributors": [
-    "Alex Dean",
-    "Simon Andersson",
-    "Anthon Pang",
-    "Fred Blundun"
-  ],
-  "description": "JavaScript tracker for Snowplow",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/snowplow/snowplow-javascript-tracker.git"
-  },
-  "bugs": "https://github.com/snowplow/snowplow-javascript-tracker/issues",
-  "keywords": [
-    "tracking",
-    "web analytics",
-    "events",
-    "open source"
-  ],
-  "license": "Simplified BSD",
-  "private": true
+	"name": "snowplow-tracker",
+	"version": "2.4.2",
+	"dependencies": {
+		"JSON": "~1.0.0",
+		"browser-cookie-lite": "~0.3.1",
+		"jstimezonedetect": "~1.0.5",
+		"snowplow-tracker-core": "0.3.0",
+		"lodash": "^3.1.0"
+	},
+	"devDependencies": {
+		"browserify": "~3.28.1",
+		"grunt": "~0.4.2",
+		"grunt-browserify": "~1.3.0",
+		"grunt-cloudfront": "^0.2.0",
+		"grunt-contrib-concat": "~0.3.0",
+		"grunt-lodash": "~0.3.0",
+		"grunt-s3": "~0.2.0-alpha.3",
+		"grunt-yui-compressor": "git://github.com/snowplow/grunt-yui-compressor.git#feature/issue-8",
+		"intern": "~1.5.0",
+		"lodash-cli": "^2.4.2",
+		"murmurhash": "0.0.2",
+		"semver": "~2.2.1",
+		"sha1": "git://github.com/pvorb/node-sha1.git#v1.0.0"
+	},
+	"contributors": [
+		"Alex Dean",
+		"Simon Andersson",
+		"Anthon Pang",
+		"Fred Blundun"
+	],
+	"description": "JavaScript tracker for Snowplow",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/snowplow/snowplow-javascript-tracker.git"
+	},
+	"bugs": "https://github.com/snowplow/snowplow-javascript-tracker/issues",
+	"keywords": [
+		"tracking",
+		"web analytics",
+		"events",
+		"open source"
+	],
+	"license": "Simplified BSD",
+	"private": true
 }
